--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -11,7 +11,7 @@
    
             <img src="/Images/logo.png" alt="LOGO" id="loginpageLogo" style="width:250px; height:150px" />
             <br />
-            <h3>Welcome! Please Login Below</h3>
+            <div class="loginWelcome"id="loginWelcome">Welcome! Please Login Below</div>
         <div class="row">
             <div class="col-md-4, text-center">
                 <section>
@@ -21,8 +21,8 @@
                         <hr />
                         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                         <div class="form-floating mb-3" id="emailLogin" style="padding-left: 15px; padding-right:15px; text-indent:5px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-                                <input asp-for="Input.Email" class="form-control" id="emailLogin" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                                <label asp-for="Input.Email" id="emailLogin" class="form-label">Email (Ex: name@example.com)</label>
+                                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                                <label asp-for="Input.Email" class="form-label">Email (Ex: name@example.com)</label>
                             <span asp-validation-for="Input.Email" class="text-danger"></span>
                         </div>
                             <div class="form-floating mb-3" id="passwordLogin" style="padding-left: 15px; padding-right:15px; text-indent:5px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
@@ -45,7 +45,7 @@
                             </p>*@
                             <br />
                                 <div class="registrationLink" sstyle="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Don't have an account? Create one here!</a>
+                                    <a id="registerLink" asp-area="Identity" asp-page="/Account/Register">Don't have an account? Create one here!</a>
                             </div>
                             @*<p>
                                 <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
